исправила deal - deal DocumentController
