# deal/src/main/java/com/undina/deal/controller/DealController.java
@@ -4,7 +4,7 @@ import com.undina.deal.service.DealService;
 import com.undina.deal.util.ModelFormatter;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.openapitools.api.DealApi;
+import org.openapitools.api.DealControllerApi;
 import org.openapitools.model.FinishRegistrationRequestDTO;
 import org.openapitools.model.LoanApplicationRequestDTO;
 import org.openapitools.model.LoanOfferDTO;
@@ -18,7 +18,7 @@ import java.util.List;
 @Slf4j
 @RestController
 @RequiredArgsConstructor
-public class DealController implements DealApi {
+public class DealController implements DealControllerApi {
     private final DealService dealService;
 
     @Override
@@ -44,30 +44,6 @@ public class DealController implements DealApi {
                 ModelFormatter.toLogFormat(finishRegistrationRequestDTO));
         dealService.calculateCredit(applicationId, finishRegistrationRequestDTO);
         log.info("getCalculation - result: OK");
-        return ResponseEntity.ok().build();
-    }
-
-    @Override
-    public ResponseEntity<Void> sendDocuments(Long applicationId) {
-        log.info("sendDocuments - start: applicationId = {}", applicationId);
-        dealService.sendDocuments(applicationId);
-        log.info("sendDocuments - result: OK");
-        return ResponseEntity.ok().build();
-    }
-
-    @Override
-    public ResponseEntity<Void> signDocuments(Long applicationId) {
-        log.info("signDocuments - start: applicationId = {}", applicationId);
-        dealService.signDocuments(applicationId);
-        log.info("signDocuments - result: OK");
-        return ResponseEntity.ok().build();
-    }
-
-    @Override
-    public ResponseEntity<Void> codeDocuments(Long applicationId) {
-        log.info("codeDocuments - start: applicationId = {}", applicationId);
-        dealService.codeDocuments(applicationId);
-        log.info("codeDocuments - result: OK");
         return ResponseEntity.ok().build();
     }
 }
